# holosophos-multi-llm

./: ._holosophos.egg-info  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python.yml
holosophos/: files.py  main_agent.py  server.py  settings.py  utils.py
holosophos/agents/: __init__.py  librarian.py  mle_solver.py  proposer.py  reviewer.py  writer.py
holosophos/prompts/: librarian.yaml  mle_solver.yaml  mle_solver_remote.yaml  proposer.yaml  reviewer.yaml  system.yaml  writer.yaml
reports/: get_gaia_metrics.py  run_gaia.py  run_librarian_eval.py  run_mle_solver_eval.py  run_proposer_eval.py  run_reviewer_eval.py
reports/data/: librarian_test.jsonl  mle_solver_test.jsonl  proposer_test.jsonl
tests/: conftest.py  test_composition.py  test_librarian.py
world_model_experiments/: run_experiments.py
world_model_experiments/environments/: cartpole.py  gridworld.py
world_model_experiments/experiments/: rq1_long_horizon.py  rq2_partial_observability.py  rq3_action_ambiguity.py  rq4_mitigation.py
world_model_experiments/models/: rssm.py
world_model_experiments/results/rq2_partial_observability/: results.json
world_model_experiments/utils/: experiment_utils.py
